tests/machine/x/pl/values_builtin.out
ERROR: /workspace/mochi/tests/machine/x/pl/values_builtin.pl:6:9: Syntax error: Operator expected

