tests/machine/x/pl/values_builtin.pl
:- style_check(-singleton).
main :-
    % unsupported: unsupported primary
    % unsupported: unsupported primary
    true.
:- initialization(main, main).
